--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <img src="img/playlist.png" alt="">
                 <span>Subscriptions</span>
             </div>
+            <hr>
             <div class="option">
                 <img src="img/library.png" alt="">
                 <span>Library</span>
@@ -67,6 +68,7 @@
                 <img src="img/yourvideos.png" alt="">
                 <span>Your Videos</span>
             </div>
+            <hr>
             <div class="option">
                 <img src="img/time.png" alt="">
                 <span>Watch Later</span>
@@ -79,6 +81,7 @@
                 <img src="img/download.png" alt="">
                 <span>Downloads</span>
             </div>
+            <hr>
             <div class="option">
                 <img src="img/expand-button.png" alt="">
                 <span>Show More</span>
@@ -87,7 +90,7 @@
         <main class="content">
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -96,7 +99,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -105,7 +108,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -114,7 +117,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -123,7 +126,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -132,7 +135,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -141,7 +144,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -150,7 +153,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -159,7 +162,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -168,7 +171,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -177,7 +180,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -186,7 +189,7 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
@@ -195,13 +198,50 @@
             </div>
             <div class="video">
                 <img src="img/video-marketing.png" alt="">
-                <span>This is Video Title</span>
+                <span>Video Title</span>
                 <span>Channel Name</span>
                 <div class="video-details">
                     <span>views</span>
                     <span>hours ago</span>
                 </div>
             </div>
+            <div class="video">
+                <img src="img/video-marketing.png" alt="">
+                <span>Video Title</span>
+                <span>Channel Name</span>
+                <div class="video-details">
+                    <span>views</span>
+                    <span>hours ago</span>
+                </div>
+            </div>
+            <div class="video">
+                <img src="img/video-marketing.png" alt="">
+                <span>Video Title</span>
+                <span>Channel Name</span>
+                <div class="video-details">
+                    <span>views</span>
+                    <span>hours ago</span>
+                </div>
+            </div>
+            <div class="video">
+                <img src="img/video-marketing.png" alt="">
+                <span>Video Title</span>
+                <span>Channel Name</span>
+                <div class="video-details">
+                    <span>views</span>
+                    <span>hours ago</span>
+                </div>
+            </div>
+            <div class="video">
+                <img src="img/video-marketing.png" alt="">
+                <span>Video Title</span>
+                <span>Channel Name</span>
+                <div class="video-details">
+                    <span>views</span>
+                    <span>hours ago</span>
+                </div>
+            </div>
+            
         </main>
     </div>
 </body>
